feat: implement Google Auth, secure cookie-based session management, and add scheduled request cleanup for rate limiting